Fixed popover z-index.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -459,7 +459,7 @@ table.field-details .help-text hr {
 .popover {
 	width: auto;
 	max-width: inherit;
-	z-index: 2100;
+	z-index: 2147483647;
 }
 
 .popover-inner {
